--- a/index.html
+++ b/index.html
@@ -8,3 +8,14 @@
   </head>
   <body></body>
 </html>
+<!-- 
+  New local Repository
+  - git init
+
+  Stage changes to commit
+  - git add <what-to-add>
+    git add .   (all)
+Commit Staged Changes
+- git commit -m '<exlicit but short commit message'
+
+-->
