add howdy to header1

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     git add .   (all)
 Commit Staged Changes
 - git commit -m '<exlicit but short commit message'
-
+    git commit -m "initial commit"
+    
 -->
